# DistributedImageSystem

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
config/: default_config.json
include/common/: dual_logger.hpp  ipc_utils.hpp
scripts/: run_all.sh
src/generator/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  main.cpp
src/processor/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/e2e/: e2e_flow_test.cpp
tests/unit/: ipc_utils_test.cpp
visualizer/: interactive_visualizer.py  visualize_keypoints.py
